--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -1,12 +1,25 @@
 {
-	"HERO_T": "TO SUCCEED YOU MUST READ",
-	"HERO_D": "Turn your dreams into reality with the right knowledge. Our ebooks will guide you step by step. Download now and start your journey!",
-	"S1_T": "What story do you want to live today? Find your next book here.",
+	"HERO_T": "Entrepreneur in America: Your Complete Map to Success in the USA",
+	"HERO_D": "Discover exclusive strategies for business, investment, and financial education to grow in the United States.",
+	"S1_T": "Transform Your Life with Our Exclusive Ebooks!",
+	"S1_D": "Access the knowledge you need to thrive in America. From artificial intelligence to smart investments.",
 	"EBOOK_STARTUP": "How to get investments and funding for your startup",
 	"EBOOK_PLAN": "How to create an effective business plan",
 	"EBOOK_KID_MONEY": "How to teach children to manage money wisely",
 	"EBOOK_INVEST": "How to invest in the US stock market - a practical guide for the immigrant investor",
 	"EBOOK_EXTRACT": "Legal A.I. - how to get the most out of AI in legal practice",
 	"EBOOK_REMOTEWORK": " Introduction to remote work with artificial intelligence",
-	"EBOOK_MARKET": "The supermarket mystery - Introducing Mr. Wrapped and Fierce"
+	"EBOOK_MARKET": "The supermarket mystery - Introducing Mr. Wrapped and Fierce",
+	"S2_T": "Learn from the Best: Ebooks, Videos, and More.",
+	"S2_D": "Explore content ranging from business to artificial intelligence, with practical tips to turn your plans into reality.",
+	"S3_T": "Financial Education and Investments: The Path to Your Financial Freedom",
+	"S3_D": "Discover the best strategies to invest and manage your money in the United States.",
+	"S4_T": "About Our Mission",
+	"S4_D": "At the Entrepreneur in America website, our mission is to empower entrepreneurs and investors to achieve success in the United States by offering exclusive content on business, investments, and financial education. Our ebooks and videos provide practical information and up-to-date strategies to help you make the best decisions.",
+	"S5_T": "Ebook Highlights",
+	"S5_D": "Our ebooks are carefully crafted to provide deep and practical insights in areas like artificial intelligence, personal finance, investment, and entrepreneurship. Take advantage of our special offers and start your journey to success today!",
+	"S6_T": "Benefits of Following Our YouTube Channel",
+	"S6_D": "On our YouTube channel, you will find weekly videos that complement our ebooks, with exclusive tips, expert interviews, and practical tutorials to put knowledge into action. Subscribe now so you don't miss any content!",
+	"S7_T": "Testimonials from Those Who Have Already Succeeded",
+	"S7_D": "The ebooks from Entrepreneur in America helped me understand the American market and structure my business more efficiently. I recommend them to anyone looking to invest in their future!"
 }
