--- a/src/lib/translations/pt-br/common.json
+++ b/src/lib/translations/pt-br/common.json
@@ -1,20 +1,25 @@
 {
-	"HERO_T": "Para ter sucesso, você deve ler.",
-	"HERO_D": "Transforme seus sonhos em realidade com o conhecimento certo. Nossos ebooks te guiarão passo a passo. Baixe agora e comece sua jornada!",
-
-	"S1_T": "Qual história você quer viver hoje? Encontre seu próximo livro aqui.",
+	"HERO_T": "Empreenda na América: Seu Mapa Completo para Sucesso nos EUA",
+	"HERO_D": "Descubra estratégias exclusivas de negócios, investimentos, e educação financeira para crescer nos Estados Unidos.",
+	"S1_T": "Transforme Sua Vida com Nossos Ebooks Exclusivos!",
+	"S1_D": " Acesse o conhecimento que você precisa para prosperar na América. Desde inteligência artificial até investimentos inteligentes.",
 	"EBOOK_STARTUP": "Como conseguir investimentos e financiamentos para sua startup",
 	"EBOOK_PLAN": "Como elaborar um plano de negocios eficaz",
 	"EBOOK_KID_MONEY": "Como ensinar a crianca a lidar com o dinheiro de forma inteligente",
 	"EBOOK_INVEST": "Como investor no mercado de acoes dos estados unidos - o guia pratico do investidor imigrante",
 	"EBOOK_EXTRACT": "I.A.DVOCATÍCIA - como extrair o melhor da i.a na pratica da advocacia",
 	"EBOOK_REMOTEWORK": "Introducao ao trabalho remoto com a inteligencia artificial",
-	"EBOOK_MARKET": "O misterio do supermercado - Estreando o Sr. embrulhado e ferrozo"
+	"EBOOK_MARKET": "O misterio do supermercado - Estreando o Sr. embrulhado e ferrozo",
+	"S2_T": "Aprenda com os Melhores: Ebooks, Vídeos e Mais.",
+	"S2_D": "Explore conteúdos que vão desde negócios a inteligência artificial, com dicas práticas para transformar seus planos em realidade.",
+	"S3_T": "Educação Financeira e Investimentos: O Caminho para Sua Liberdade Financeira",
+	"S3_D": "Conheça as melhores estratégias para investir e gerir seu dinheiro nos Estados Unidos",
+	"S4_T": "Sobre a Nossa Missão",
+	"S4_D": "No site Empreenda na América, nossa missão é empoderar empreendedores e investidores a alcançarem o sucesso nos Estados Unidos, oferecendo conteúdo exclusivo sobre negócios, investimentos e educação financeira. Nossos ebooks e vídeos trazem informações práticas e estratégias atualizadas para ajudar você a tomar as melhores decisões.",
+	"S5_T": "Destaques dos Ebooks",
+	"S5_D": "Nossos ebooks são cuidadosamente elaborados para fornecer insights profundos e práticos em áreas como inteligência artificial, finanças pessoais, investimentos e empreendedorismo. Aproveite nossas ofertas especiais e comece hoje mesmo sua jornada rumo ao sucesso!",
+	"S6_T": "Benefícios de Acompanhar Nosso Canal no YouTube",
+	"S6_D": "No canal do YouTube, você encontrará vídeos semanais que complementam nossos ebooks, com dicas exclusivas, entrevistas com especialistas, e tutoriais práticos para colocar o conhecimento em ação. Inscreva-se agora para não perder nenhum conteúdo!",
+	"S7_T": "Depoimentos de Quem Já Empreendeu com Sucesso",
+	"S7_D": "Os ebooks do Empreenda na América me ajudaram a entender o mercado americano e a estruturar meu negócio de forma mais eficiente. Recomendo a todos que querem investir no seu futuro!"
 }
-
-
-
-
-
-
-
