--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -21,5 +21,15 @@
 	"S6_T": "Benefits of Following Our YouTube Channel",
 	"S6_D": "On our YouTube channel, you will find weekly videos that complement our ebooks, with exclusive tips, expert interviews, and practical tutorials to put knowledge into action. Subscribe now so you don't miss any content!",
 	"S7_T": "Testimonials from Those Who Have Already Succeeded",
-	"S7_D": "The ebooks from Entrepreneur in America helped me understand the American market and structure my business more efficiently. I recommend them to anyone looking to invest in their future!"
+	"S7_D": "The ebooks from Entrepreneur in America helped me understand the American market and structure my business more efficiently. I recommend them to anyone looking to invest in their future!",
+	"FOOT_contact": "Contact",
+	"FOOT_help": "Help & Faq",
+	"FOOT_terms": "Terms & Conditions",
+	"FOOT_privacy": "Privacy Policy",
+	"FOOT_aboutus": "About Us",
+	"FOOT_community": "Community",
+	"FOOT_shop": "Shop",
+	"FOOT_company": "Company",
+	"FOOT_support": "Support Policy",
+	"FOOT_documentation": "Documentation"
 }
