--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -21,5 +21,15 @@
 	"S6_T": "Beneficios de Seguir Nuestro Canal de YouTube",
 	"S6_D": "En el canal de YouTube, encontrarás videos semanales que complementan nuestros ebooks, con consejos exclusivos, entrevistas con expertos y tutoriales prácticos para poner el conocimiento en acción. ¡Suscríbete ahora para no perderte ningún contenido!",
 	"S7_T": "Testimonios de Quienes ya han Emprendido con Éxito",
-	"S7_D": "¡Los ebooks de Empreende en América me ayudaron a entender el mercado estadounidense y a estructurar mi negocio de manera más eficiente! Los recomiendo a todos los que quieren invertir en su futuro."
+	"S7_D": "¡Los ebooks de Empreende en América me ayudaron a entender el mercado estadounidense y a estructurar mi negocio de manera más eficiente! Los recomiendo a todos los que quieren invertir en su futuro.",
+	"FOOT_contact": "Contacto",
+	"FOOT_help": "Ayuda & Preguntas Frecuentes",
+	"FOOT_terms": "Términos y Condiciones",
+	"FOOT_privacy": "Política de Privacidad",
+	"FOOT_aboutus": "Sobre Nosotros",
+	"FOOT_community": "Comunidad",
+	"FOOT_shop": "Tienda",
+	"FOOT_company": "Empresa",
+	"FOOT_support": "Política de Soporte",
+	"FOOT_documentation": "Documentación"
 }
