--- a/src/lib/translations/pt-br/common.json
+++ b/src/lib/translations/pt-br/common.json
@@ -21,5 +21,15 @@
 	"S6_T": "Benefícios de Acompanhar Nosso Canal no YouTube",
 	"S6_D": "No canal do YouTube, você encontrará vídeos semanais que complementam nossos ebooks, com dicas exclusivas, entrevistas com especialistas, e tutoriais práticos para colocar o conhecimento em ação. Inscreva-se agora para não perder nenhum conteúdo!",
 	"S7_T": "Depoimentos de Quem Já Empreendeu com Sucesso",
-	"S7_D": "Os ebooks do Empreenda na América me ajudaram a entender o mercado americano e a estruturar meu negócio de forma mais eficiente. Recomendo a todos que querem investir no seu futuro!"
+	"S7_D": "Os ebooks do Empreenda na América me ajudaram a entender o mercado americano e a estruturar meu negócio de forma mais eficiente. Recomendo a todos que querem investir no seu futuro!",
+	"FOOT_contact": "Contato",
+	"FOOT_help": "Ajuda & FAQ",
+	"FOOT_terms": "Termos e Condições",
+	"FOOT_privacy": "Política de Privacidade",
+	"FOOT_aboutus": "Sobre Nós",
+	"FOOT_community": "Comunidade",
+	"FOOT_shop": "Loja",
+	"FOOT_company": "Empresa",
+	"FOOT_support": "Política de Suporte",
+	"FOOT_documentation": "Documentação"
 }
