--- a/src/lib/translations/pt-br/common.json
+++ b/src/lib/translations/pt-br/common.json
@@ -6,7 +6,6 @@
 	"EBOOK_STARTUP": "Como conseguir investimentos e financiamentos para sua startup",
 	"EBOOK_PLAN": "Como elaborar um plano de negocios eficaz",
 	"EBOOK_KID_MONEY": "Como ensinar a crianca a lidar com o dinheiro de forma inteligente",
-	"EBOOK_INVEST": "Como investor no mercado de acoes dos estados unidos - o guia pratico do investidor imigrante",
 	"EBOOK_EXTRACT": "I.A.DVOCATÍCIA - como extrair o melhor da i.a na pratica da advocacia",
 	"EBOOK_REMOTEWORK": "Introducao ao trabalho remoto com a inteligencia artificial",
 	"EBOOK_MARKET": "O misterio do supermercado - Estreando o Sr. embrulhado e ferrozo",
@@ -22,6 +21,12 @@
 	"S6_D": "No canal do YouTube, você encontrará vídeos semanais que complementam nossos ebooks, com dicas exclusivas, entrevistas com especialistas, e tutoriais práticos para colocar o conhecimento em ação. Inscreva-se agora para não perder nenhum conteúdo!",
 	"S7_T": "Depoimentos de Quem Já Empreendeu com Sucesso",
 	"S7_D": "Os ebooks do Empreenda na América me ajudaram a entender o mercado americano e a estruturar meu negócio de forma mais eficiente. Recomendo a todos que querem investir no seu futuro!",
+	"TEST_Cassia_name": "Cassia Andrade",
+	"TEST_Maria_name": "Maria do Carmo",
+	"TEST_DrSten_name": "Dr. Stenio Scurissa",
+	"TEST_Cassia": "Adorei como este ebook aborda a educação financeira de uma maneira tão clara e prática. As seções sobre orçamento e planejamento são particularmente útis, pois ensinam as crianças a importância e gerenciar seus recursos de maneira inteligente desde cedo.",
+	"TEST_Maria": "O 'Mistério do Supermercado' é fantástico! Combina diversão e aprendizado de forma brilhante. A narrativa e as ilustrações mantêms crianças envolvidas e ansiosas por comer vegetais!",
+	"TEST_DrSten": "Excelente ebook! Como advocado, percebi a importância de incorporar IA no meu trabalho diário. As técnicas de análise de documentos e automação apresentatas são incrivelmente úteis.",
 	"FOOT_contact": "Contato",
 	"FOOT_help": "Ajuda & FAQ",
 	"FOOT_terms": "Termos e Condições",
