--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -6,7 +6,6 @@
 	"EBOOK_STARTUP": "How to get investments and funding for your startup",
 	"EBOOK_PLAN": "How to create an effective business plan",
 	"EBOOK_KID_MONEY": "How to teach children to manage money wisely",
-	"EBOOK_INVEST": "How to invest in the US stock market - a practical guide for the immigrant investor",
 	"EBOOK_EXTRACT": "Legal A.I. - how to get the most out of AI in legal practice",
 	"EBOOK_REMOTEWORK": " Introduction to remote work with artificial intelligence",
 	"EBOOK_MARKET": "The supermarket mystery - Introducing Mr. Wrapped and Fierce",
@@ -22,6 +21,12 @@
 	"S6_D": "On our YouTube channel, you will find weekly videos that complement our ebooks, with exclusive tips, expert interviews, and practical tutorials to put knowledge into action. Subscribe now so you don't miss any content!",
 	"S7_T": "Testimonials from Those Who Have Already Succeeded",
 	"S7_D": "The ebooks from Entrepreneur in America helped me understand the American market and structure my business more efficiently. I recommend them to anyone looking to invest in their future!",
+	"TEST_Cassia_name": "Cassia Andrade",
+	"TEST_Maria_name": "Maria do Carmo",
+	"TEST_DrSten_name": "Dr. Stenio Scurissa",
+	"TEST_Cassia": "I loved how this ebook addresses financial education in such a clear and practical way. The sections on budgeting and planning are particularly useful, as they teach children the importance of managing their resources wisely from an early age.",
+	"TEST_Maria": "'The Mystery of the Supermarket' is fantastic! It brilliantly combines fun and learning. The narrative and illustrations keep children engaged and eager to eat vegetables!",
+	"TEST_DrSten": "Excellent ebook! As a lawyer, I realized the importance of incorporating AI into my daily work. The document analysis and automation techniques presented are incredibly useful.",
 	"FOOT_contact": "Contact",
 	"FOOT_help": "Help & Faq",
 	"FOOT_terms": "Terms & Conditions",
