--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -6,7 +6,6 @@
 	"EBOOK_STARTUP": "Cómo conseguir inversiones y financiamiento para tu startup",
 	"EBOOK_PLAN": "Cómo elaborar un plan de negocios eficaz",
 	"EBOOK_KID_MONEY": "Cómo enseñar a los niños a manejar el dinero de forma inteligente",
-	"EBOOK_INVEST": "Cómo invertir en el mercado de valores de Estados Unidos - la guía práctica para el inversor inmigrante",
 	"EBOOK_EXTRACT": "I.A. JURÍDICA - cómo sacar el máximo provecho de la I.A en la práctica legal",
 	"EBOOK_REMOTEWORK": "Introducción al trabajo remoto con inteligencia artificial",
 	"EBOOK_MARKET": "El misterio del supermercado - El debut del Sr. Envuelto y Feroz",
@@ -22,6 +21,12 @@
 	"S6_D": "En el canal de YouTube, encontrarás videos semanales que complementan nuestros ebooks, con consejos exclusivos, entrevistas con expertos y tutoriales prácticos para poner el conocimiento en acción. ¡Suscríbete ahora para no perderte ningún contenido!",
 	"S7_T": "Testimonios de Quienes ya han Emprendido con Éxito",
 	"S7_D": "¡Los ebooks de Empreende en América me ayudaron a entender el mercado estadounidense y a estructurar mi negocio de manera más eficiente! Los recomiendo a todos los que quieren invertir en su futuro.",
+	"TEST_Cassia_name": "Cassia Andrade",
+	"TEST_Maria_name": "Maria do Carmo",
+	"TEST_DrSten_name": "Dr. Stenio Scurissa",
+	"TEST_Cassia": "Me encantó cómo este ebook aborda la educación financiera de una manera tan clara y práctica. Las secciones sobre presupuesto y planificación son particularmente útiles, ya que enseñan a los niños la importancia de gestionar sus recursos de manera inteligente desde una edad temprana.",
+	"TEST_Maria": "¡'El Misterio del Supermercado' es fantástico! Combina diversión y aprendizaje de manera brillante. La narrativa y las ilustraciones mantienen a los niños comprometidos y ansiosos por comer vegetales!",
+	"TEST_DrSten": "¡Excelente ebook! Como abogado, me di cuenta de la importancia de incorporar la IA en mi trabajo diario. Las técnicas de análisis de documentos y automatización presentadas son increíblemente útiles.",
 	"FOOT_contact": "Contacto",
 	"FOOT_help": "Ayuda & Preguntas Frecuentes",
 	"FOOT_terms": "Términos y Condiciones",
