--- a/src/lib/translations/en/home.json
+++ b/src/lib/translations/en/home.json
@@ -5,15 +5,23 @@
 	"HERO_D": "Discover exclusive strategies for business, investment, and financial education to grow in the United States.",
 	"S1_T": "Transform Your Life with Our Exclusive Ebooks!",
 	"S1_D": "Access the knowledge you need to thrive in America. From artificial intelligence to smart investments.",
-	"EBOOK_STARTUP": "How to get investments and funding for your startup",
-	"EBOOK_PLAN": "How to create an effective business plan",
+	"EBOOK_STARTUP": "How to get Investments and Funding for your Startup",
+	"EBOOK_PLAN": "How to create an effective Business Plan",
 	"EBOOK_KID_MONEY": "How to teach children to manage money wisely",
-	"EBOOK_EXTRACT": "Legal A.I. - how to get the most out of AI in legal practice",
-	"EBOOK_REMOTEWORK": " Introduction to remote work with artificial intelligence",
-	"EBOOK_MARKET": "The supermarket mystery - Introducing Mr. Wrapped and Fierce",
+	"EBOOK_IADVOCATICIA": "I.A.DVOCACY - How to make the most of A.I in the practice of Law",
+	"EBOOK_REMOTEWORK": "Introduction to remote work with artificial intelligence",
+	"EBOOK_MARKET": "The Supermarket Mystery - Introducing Mr. Wrapped and Fierce",
+	"EBOOK_CELERIDADE": "Celerity and Procedural Efficiency: The Revolution of A.I in Law Practice",
+	"HOTMART_EBOOK_STARTUP": "#",
+	"HOTMART_EBOOK_PLAN": "#",
+	"HOTMART_EBOOK_KID_MONEY": "#",
+	"HOTMART_EBOOK_IADVOCATICIA": "#",
+	"HOTMART_EBOOK_REMOTEWORK": "#",
+	"HOTMART_EBOOK_MARKET": "#",
+	"HOTMART_EBOOK_CELERIDADE": "#",
 	"S2_T": "Learn from the Best: Ebooks, Videos, and More.",
 	"S2_D": "Explore content ranging from business to artificial intelligence, with practical tips to turn your plans into reality.",
-	"S3_T": "Financial Education and Investments: The Path to Your Financial Freedom",
+	"S3_T": "Financial Education: The Path to Your Financial Freedom",
 	"S3_D": "Discover the best strategies to invest and manage your money in the United States.",
 	"S4_T": "About Our Mission",
 	"S4_D": "At the Entrepreneur in America website, our mission is to empower entrepreneurs and investors to achieve success in the United States by offering exclusive content on business, investments, and financial education. Our ebooks and videos provide practical information and up-to-date strategies to help you make the best decisions.",
