--- a/src/lib/translations/es/home.json
+++ b/src/lib/translations/es/home.json
@@ -5,15 +5,23 @@
 	"HERO_D": "Descubre estrategias exclusivas de negocios, inversiones y educación financiera para crecer en Estados Unidos.",
 	"S1_T": "¡Transforma tu Vida con Nuestros Ebooks Exclusivos!",
 	"S1_D": "Accede al conocimiento que necesitas para prosperar en América. Desde inteligencia artificial hasta inversiones inteligentes.",
-	"EBOOK_STARTUP": "Cómo conseguir inversiones y financiamiento para tu startup",
-	"EBOOK_PLAN": "Cómo elaborar un plan de negocios eficaz",
+	"EBOOK_STARTUP": "Cómo conseguir Inversiones y Financiamiento para tu Startup",
+	"EBOOK_PLAN": "Cómo elaborar un Plan de Negocios eficaz",
 	"EBOOK_KID_MONEY": "Cómo enseñar a los niños a manejar el dinero de forma inteligente",
-	"EBOOK_EXTRACT": "I.A. JURÍDICA - cómo sacar el máximo provecho de la I.A en la práctica legal",
+	"EBOOK_IADVOCATICIA": "I.A.DVOCACÍA - Cómo sacar el máximo provecho de la I.A en la práctica de la Abogacía",
 	"EBOOK_REMOTEWORK": "Introducción al trabajo remoto con inteligencia artificial",
-	"EBOOK_MARKET": "El misterio del supermercado - El debut del Sr. Envuelto y Feroz",
+	"EBOOK_MARKET": "El Misterio del Supermercado - El debut del Sr. Envuelto y Ferrozo",
+	"EBOOK_CELERIDADE": "Celeridad y Eficiencia Procesal: La Revolución de la I.A en la Abogacía",
+	"HOTMART_EBOOK_STARTUP": "#",
+	"HOTMART_EBOOK_PLAN": "#",
+	"HOTMART_EBOOK_KID_MONEY": "https://toptier-andresilva.hotmart.host/educacion-financiera-905c5d8f-feff-4b88-9ab4-e044dfd20c8b",
+	"HOTMART_EBOOK_IADVOCATICIA": "#",
+	"HOTMART_EBOOK_REMOTEWORK": "#",
+	"HOTMART_EBOOK_MARKET": "#",
+	"HOTMART_EBOOK_CELERIDADE": "https://toptier-andresilva.hotmart.host/celeridade-e-eficiencia-processual-a-revolucao-da-i-a-na-pratica-da-advocacia-eecb78d8-b87e-40f2-85f5-b76f67e59e36",
 	"S2_T": "Aprende de los Mejores: Ebooks, Videos y Más.",
 	"S2_D": "Explora contenidos que van desde negocios hasta inteligencia artificial, con consejos prácticos para convertir tus planes en realidad.",
-	"S3_T": "Educación Financiera e Inversiones: El Camino hacia tu Libertad Financiera",
+	"S3_T": "Educación Financiera: El Camino hacia tu Libertad Financiera",
 	"S3_D": "Conoce las mejores estrategias para invertir y gestionar tu dinero en Estados Unidos.",
 	"S4_T": "Sobre Nuestra Misión",
 	"S4_D": "En el sitio Empreende en América, nuestra misión es empoderar a emprendedores e inversores para alcanzar el éxito en Estados Unidos, ofreciendo contenido exclusivo sobre negocios, inversiones y educación financiera. Nuestros ebooks y videos ofrecen información práctica y estrategias actualizadas para ayudarte a tomar las mejores decisiones.",
