--- a/src/lib/translations/pt/home.json
+++ b/src/lib/translations/pt/home.json
@@ -5,15 +5,23 @@
 	"HERO_D": "Descubra estratégias exclusivas de negócios, investimentos e educação financeira para crescer nos Estados Unidos.",
 	"S1_T": "Transforme sua Vida com Nossos Ebooks Exclusivos!",
 	"S1_D": "Acesse o conhecimento que você precisa para prosperar na América. Da inteligência artificial a investimentos inteligentes.",
-	"EBOOK_STARTUP": "Como conseguir investimentos e financiamento para sua startup",
-	"EBOOK_PLAN": "Como elaborar um plano de negócios eficaz",
+	"EBOOK_STARTUP": "Como conseguir Investimentos e Financiamento para sua Startup",
+	"EBOOK_PLAN": "Como elaborar um Plano de Negócios eficaz",
 	"EBOOK_KID_MONEY": "Como ensinar as crianças a lidar com o dinheiro de forma inteligente",
-	"EBOOK_EXTRACT": "I.A. JURÍDICA - como tirar o máximo proveito da I.A na prática jurídica",
+	"EBOOK_IADVOCATICIA": "I.A.DVOCATÍCIA - como tirar o máximo proveito da I.A na prática da Advocacia",
 	"EBOOK_REMOTEWORK": "Introdução ao trabalho remoto com inteligência artificial",
-	"EBOOK_MARKET": "O mistério do supermercado - A estreia do Sr. Embalado e Feroz",
+	"EBOOK_MARKET": "O Mistério do Supermercado - A estréia do Sr. Embrulhado e Ferrozo",
+	"EBOOK_CELERIDADE": "Celeridade e Eficiência Processual: A Revolução da I.A na Advocacia",
+	"HOTMART_EBOOK_STARTUP": "https://go.hotmart.com/D93514468N",
+	"HOTMART_EBOOK_PLAN": "https://go.hotmart.com/R93809763S",
+	"HOTMART_EBOOK_KID_MONEY": "https://go.hotmart.com/C93777626P",
+	"HOTMART_EBOOK_IADVOCATICIA": "https://go.hotmart.com/J94047143K",
+	"HOTMART_EBOOK_REMOTEWORK": "https://go.hotmart.com/G93758018K",
+	"HOTMART_EBOOK_MARKET": "https://go.hotmart.com/I93879420X",
+	"HOTMART_EBOOK_CELERIDADE": "https://go.hotmart.com/U95340400D",
 	"S2_T": "Aprenda com os Melhores: Ebooks, Vídeos e Muito Mais.",
 	"S2_D": "Explore conteúdos que vão desde negócios até inteligência artificial, com dicas práticas para transformar seus planos em realidade.",
-	"S3_T": "Educação Financeira e Investimentos: O Caminho para sua Liberdade Financeira",
+	"S3_T": "Educação Financeira: O Caminho para sua Liberdade Financeira",
 	"S3_D": "Conheça as melhores estratégias para investir e gerenciar seu dinheiro nos Estados Unidos.",
 	"S4_T": "Sobre Nossa Missão",
 	"S4_D": "No site Empreenda na América, nossa missão é empoderar empreendedores e investidores para alcançar o sucesso nos Estados Unidos, oferecendo conteúdo exclusivo sobre negócios, investimentos e educação financeira. Nossos ebooks e vídeos oferecem informações práticas e estratégias atualizadas para te ajudar a tomar as melhores decisões.",
