--- a/src/lib/translations/pt/home.json
+++ b/src/lib/translations/pt/home.json
@@ -1,7 +1,8 @@
 {
 	"title": "0",
 	"text": "0",
-	"HERO_T": "Empreenda na América: Seu Mapa Completo para o Sucesso nos EUA.",
+	"HERO_T": "Empreenda na América: ",
+	"HERO_T2": "Seu Mapa Completo para o Sucesso nos EUA",
 	"HERO_D": "Descubra estratégias exclusivas de negócios, investimentos e educação financeira para crescer nos Estados Unidos.",
 	"S1_T": "Transforme sua Vida com Nossos Ebooks Exclusivos!",
 	"S1_D": "Acesse o conhecimento que você precisa para prosperar na América. Da inteligência artificial a investimentos inteligentes.",
