--- a/src/lib/translations/en/home.json
+++ b/src/lib/translations/en/home.json
@@ -20,10 +20,13 @@
 	"HOTMART_EBOOK_REMOTEWORK": "#",
 	"HOTMART_EBOOK_MARKET": "#",
 	"HOTMART_EBOOK_CELERIDADE": "#",
-	"S2_T": "Learn from the Best: Ebooks, Videos, and More.",
-	"S2_D": "Explore content ranging from business to artificial intelligence, with practical tips to turn your plans into reality.",
-	"S3_T": "Financial Education: The Path to Your Financial Freedom",
-	"S3_D": "Discover the best strategies to invest and manage your money in the United States.",
+	"S2_T_Main": "Aprenda com os Melhores: Ebooks, Vídeos e Muito Mais.",
+	"S2_T1": "Empreenda com Confiança nos Estados Unidos!",
+	"S2_D1": "Você, imigrante hispano ou brasileiro, sabia que é possível transformar suas ideias em negócios de sucesso na América? No nosso site, você encontra recursos, guias práticos e estratégias eficazes para descomplicar o processo de empreender nos Estados Unidos. Descubra como iniciar, estruturar e expandir o seu empreendimento no maior mercado do mundo!",
+	"S2_T2": "Acelere seu Crescimento Profissional com Conhecimento!",
+	"S2_D2": "Nosso objetivo é empoderar o imigrante hispano e brasileiro a empreender nos Estados Unidos com conhecimento estratégico. Explore nossos e-books, artigos e vídeos para aprender sobre inteligência artificial, planejamento financeiro e muito mais. Empreenda com segurança e tome decisões acertadas que vão transformar sua carreira e seus negócios!",
+	"S2_T3": "Garanta seu Futuro com Segurança e Tranquilidade!",
+	"S2_D3": "Proteja o que você conquistou e planeje o futuro da sua família. Com o Seguro de Vida Inteira, você assegura proteção vitalícia e ainda acumula um valor em dinheiro que cresce ao longo do tempo. Descubra como essa estratégia pode fortalecer seu planejamento financeiro, proporcionando segurança para você e para aqueles que você ama, independentemente do que o futuro reserva. Explore mais sobre essa solução no nosso site e comece a planejar hoje mesmo!",
 	"S4_T": "About Our Mission",
 	"S4_D": "At the Entrepreneur in America website, our mission is to empower entrepreneurs and investors to achieve success in the United States by offering exclusive content on business, investments, and financial education. Our ebooks and videos provide practical information and up-to-date strategies to help you make the best decisions.",
 	"S5_T": "Ebook Highlights",
