--- a/src/lib/translations/es/home.json
+++ b/src/lib/translations/es/home.json
@@ -20,10 +20,13 @@
 	"HOTMART_EBOOK_REMOTEWORK": "#",
 	"HOTMART_EBOOK_MARKET": "#",
 	"HOTMART_EBOOK_CELERIDADE": "https://toptier-andresilva.hotmart.host/celeridade-e-eficiencia-processual-a-revolucao-da-i-a-na-pratica-da-advocacia-eecb78d8-b87e-40f2-85f5-b76f67e59e36",
-	"S2_T": "Aprende de los Mejores: Ebooks, Videos y Más.",
-	"S2_D": "Explora contenidos que van desde negocios hasta inteligencia artificial, con consejos prácticos para convertir tus planes en realidad.",
-	"S3_T": "Educación Financiera: El Camino hacia tu Libertad Financiera",
-	"S3_D": "Conoce las mejores estrategias para invertir y gestionar tu dinero en Estados Unidos.",
+	"S2_T_Main": "Aprende de los Mejores: Ebooks, Videos y Más.",
+	"S2_T1": "Empreenda com Confiança nos Estados Unidos!",
+	"S2_D1": "Você, imigrante hispano ou brasileiro, sabia que é possível transformar suas ideias em negócios de sucesso na América? No nosso site, você encontra recursos, guias práticos e estratégias eficazes para descomplicar o processo de empreender nos Estados Unidos. Descubra como iniciar, estruturar e expandir o seu empreendimento no maior mercado do mundo!",
+	"S2_T2": "Acelere seu Crescimento Profissional com Conhecimento!",
+	"S2_D2": "Nosso objetivo é empoderar o imigrante hispano e brasileiro a empreender nos Estados Unidos com conhecimento estratégico. Explore nossos e-books, artigos e vídeos para aprender sobre inteligência artificial, planejamento financeiro e muito mais. Empreenda com segurança e tome decisões acertadas que vão transformar sua carreira e seus negócios!",
+	"S2_T3": "Garanta seu Futuro com Segurança e Tranquilidade!",
+	"S2_D3": "Proteja o que você conquistou e planeje o futuro da sua família. Com o Seguro de Vida Inteira, você assegura proteção vitalícia e ainda acumula um valor em dinheiro que cresce ao longo do tempo. Descubra como essa estratégia pode fortalecer seu planejamento financeiro, proporcionando segurança para você e para aqueles que você ama, independentemente do que o futuro reserva. Explore mais sobre essa solução no nosso site e comece a planejar hoje mesmo!",
 	"S4_T": "Sobre Nuestra Misión",
 	"S4_D": "En el sitio Empreende en América, nuestra misión es empoderar a emprendedores e inversores para alcanzar el éxito en Estados Unidos, ofreciendo contenido exclusivo sobre negocios, inversiones y educación financiera. Nuestros ebooks y videos ofrecen información práctica y estrategias actualizadas para ayudarte a tomar las mejores decisiones.",
 	"S5_T": "Destacados de los Ebooks",
