--- a/src/lib/translations/pt/home.json
+++ b/src/lib/translations/pt/home.json
@@ -15,15 +15,18 @@
 	"EBOOK_CELERIDADE": "Celeridade e Eficiência Processual: A Revolução da I.A na Advocacia",
 	"HOTMART_EBOOK_STARTUP": "https://go.hotmart.com/D93514468N",
 	"HOTMART_EBOOK_PLAN": "https://go.hotmart.com/R93809763S",
-	"HOTMART_EBOOK_KID_MONEY": "https://go.hotmart.com/C93777626P",
+	"HOTMART_EBOOK_KID_MONEY": "https://hotm.art/UHwtoMP",
 	"HOTMART_EBOOK_IADVOCATICIA": "https://go.hotmart.com/J94047143K",
 	"HOTMART_EBOOK_REMOTEWORK": "https://go.hotmart.com/G93758018K",
 	"HOTMART_EBOOK_MARKET": "https://go.hotmart.com/I93879420X",
 	"HOTMART_EBOOK_CELERIDADE": "https://go.hotmart.com/U95340400D",
-	"S2_T": "Aprenda com os Melhores: Ebooks, Vídeos e Muito Mais.",
-	"S2_D": "Explore conteúdos que vão desde negócios até inteligência artificial, com dicas práticas para transformar seus planos em realidade.",
-	"S3_T": "Educação Financeira: O Caminho para sua Liberdade Financeira",
-	"S3_D": "Conheça as melhores estratégias para investir e gerenciar seu dinheiro nos Estados Unidos.",
+	"S2_T_Main": "Aprenda com os Melhores: Ebooks, Vídeos e Muito Mais.",
+	"S2_T1": "Empreenda com Confiança nos Estados Unidos!",
+	"S2_D1": "Você, imigrante hispano ou brasileiro, sabia que é possível transformar suas ideias em negócios de sucesso na América? No nosso site, você encontra recursos, guias práticos e estratégias eficazes para descomplicar o processo de empreender nos Estados Unidos. Descubra como iniciar, estruturar e expandir o seu empreendimento no maior mercado do mundo!",
+	"S2_T2": "Acelere seu Crescimento Profissional com Conhecimento!",
+	"S2_D2": "Nosso objetivo é empoderar o imigrante hispano e brasileiro a empreender nos Estados Unidos com conhecimento estratégico. Explore nossos e-books, artigos e vídeos para aprender sobre inteligência artificial, planejamento financeiro e muito mais. Empreenda com segurança e tome decisões acertadas que vão transformar sua carreira e seus negócios!",
+	"S2_T3": "Garanta seu Futuro com Segurança e Tranquilidade!",
+	"S2_D3": "Proteja o que você conquistou e planeje o futuro da sua família. Com o Seguro de Vida Inteira, você assegura proteção vitalícia e ainda acumula um valor em dinheiro que cresce ao longo do tempo. Descubra como essa estratégia pode fortalecer seu planejamento financeiro, proporcionando segurança para você e para aqueles que você ama, independentemente do que o futuro reserva. Explore mais sobre essa solução no nosso site e comece a planejar hoje mesmo!",
 	"S4_T": "Sobre Nossa Missão",
 	"S4_D": "No site Empreenda na América, nossa missão é empoderar empreendedores e investidores para alcançar o sucesso nos Estados Unidos, oferecendo conteúdo exclusivo sobre negócios, investimentos e educação financeira. Nossos ebooks e vídeos oferecem informações práticas e estratégias atualizadas para te ajudar a tomar as melhores decisões.",
 	"S5_T": "Destaques dos Ebooks",
